--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,12 @@
-<project>
+<project
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mozilla.android.sync</groupId>
   <artifactId>android-sync</artifactId>
   <version>1</version>
+  <packaging>apk</packaging>
+  <name>sync</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -28,6 +32,18 @@
       <version>4.1.2</version>
     </dependency>
     <dependency>
+      <groupId>com.google.android</groupId>
+      <artifactId>android</artifactId>
+      <version>2.3.3</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.pivotallabs</groupId>
+      <artifactId>robolectric</artifactId>
+      <version>1.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
@@ -41,4 +57,43 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <finalName>${project.artifactId}</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+        <!--
+        <artifactId>android-maven-plugin</artifactId>
+        <version>3.0.0-alpha-13</version>
+        -->
+        <artifactId>maven-android-plugin</artifactId>
+        <version>2.8.4</version>
+        <configuration>
+          <sdk>
+            <!-- platform or api level (api level 14)-->
+            <platform>14</platform>
+          </sdk>
+          <emulator>
+            <!-- the name of the avd device to use for starting the emulator -->
+            <avd>android-14</avd>
+          </emulator>
+          <undeployBeforeDeploy>true</undeployBeforeDeploy>
+        </configuration>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.6</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
