--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
           package="org.mozilla.android.sync"
           android:versionCode="1"
           android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="10" />
+  <uses-library android:name="android.test.runner" />
+  <uses-sdk android:minSdkVersion="8" />
   <application android:icon="@drawable/ic_launcher"
                android:label="@string/app_name">
     <activity android:label="@string/app_name"
@@ -14,4 +15,7 @@
       </intent-filter>
     </activity>
   </application>
+  <instrumentation android:name="android.test.InstrumentationTestRunner"
+                   android:targetPackage="org.mozilla.android.sync"
+                   android:label="Sync tests" />
 </manifest>
