--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,21 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.12.1.GA</version>
+    </dependency>
+    <dependency>
       <groupId>com.pivotallabs</groupId>
       <artifactId>robolectric</artifactId>
       <version>1.0</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
