--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,12 +6,13 @@
   <uses-library android:name="android.test.runner" />
   <uses-sdk android:minSdkVersion="8" />
   <application android:icon="@drawable/ic_launcher"
-               android:label="@string/app_name">
+               android:label="@string/app_name" android:debuggable="true">
     <activity android:label="@string/app_name"
-              android:name=".MainActivity">
+              android:name="org.mozilla.android.sync.MainActivity"
+              android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
       </intent-filter>
     </activity>
   </application>
