--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
           android:versionCode="1"
           android:versionName="1.0">
   <uses-library android:name="android.test.runner" />
-  <uses-sdk android:minSdkVersion="8" />
+  <uses-sdk android:minSdkVersion="10" />
   <application android:icon="@drawable/ic_launcher"
                android:label="@string/app_name" android:debuggable="true">
     <activity android:label="@string/app_name"
@@ -12,7 +12,7 @@
               android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
   </application>
