--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.mozilla.android.sync"
-          android:versionCode="1"
-          android:versionName="1.0">
-  <uses-library android:name="android.test.runner" />
-  <uses-sdk android:minSdkVersion="10" />
-  <application android:icon="@drawable/ic_launcher"
-               android:label="@string/app_name" android:debuggable="true">
-    <activity android:label="@string/app_name"
-              android:name="org.mozilla.android.sync.MainActivity"
-              android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
-  <instrumentation android:name="android.test.InstrumentationTestRunner"
-                   android:targetPackage="org.mozilla.android.sync"
-                   android:label="Sync tests" />
+    package="org.mozilla.android.sync"
+    sharedUserId="notSharedUserId"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-library android:name="android.test.runner" />
+
+    <uses-sdk android:minSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_SYNC_STATS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+
+    <application
+        android:debuggable="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
+        <activity
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:name="org.mozilla.android.sync.setup.main.SetupSyncActivity"
+            android:theme="@style/ThemeTransparent" >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:clearTaskOnLaunch="true"
+            android:launchMode="singleTask"
+            android:name="org.mozilla.android.sync.setup.main.AccountActivity"
+            android:theme="@style/ThemeTransparent" />
+        <activity
+            android:name="org.mozilla.android.sync.setup.main.SetupFailureActivity"
+            android:theme="@style/ThemeTransparent" />
+        <activity
+            android:name="org.mozilla.android.sync.setup.main.SetupSuccessActivity"
+            android:theme="@style/ThemeTransparent" />
+
+        <service
+            android:exported="true"
+            android:name="org.mozilla.android.sync.setup.main.SyncAuthenticatorService" >
+            <intent-filter >
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        <service
+            android:exported="true"
+            android:name="org.mozilla.android.sync.syncadapter.SyncService" >
+            <intent-filter >
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
+    </application>
+
+    <instrumentation
+        android:label="Sync tests"
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="org.mozilla.android.sync" />
+
 </manifest>
