--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.6</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
