--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,10 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS"/>
     <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS"/>
+    <!-- Not sure if this is right, will find out when we run it -->
+    <!-- <uses-permission android:name="org.mozilla.gecko.providers.BROWSER"/>-->
+    <uses-permission android:name="org.mozilla.gecko.PASSWORDS"/>
+    
 
     <application
         android:debuggable="true">
