--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,8 +32,12 @@
             android:name="org.mozilla.android.sync.setup.activities.SetupSyncActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="sync" android:host="org.mozilla.android" />
             </intent-filter>
         </activity>
         <activity
