--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,11 +23,10 @@
     <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS"/>
 
     <application
-        android:debuggable="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:debuggable="true">
         <activity
-            android:label="@string/app_name"
+        	android:icon="@drawable/sync_ic_launcher"
+            android:label="@string/sync_app_name"
             android:launchMode="singleTask"
             android:name="org.mozilla.android.sync.setup.activities.SetupSyncActivity" >
             <intent-filter >
