--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.mozilla.android.sync.test"
+    package="org.mozilla.gecko.sync.test"
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="10" />
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="org.mozilla.android.sync" />
+        android:targetPackage="org.mozilla.gecko.sync" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
