--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="10" />
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="org.mozilla.gecko.sync" />
+        android:targetPackage="org.mozilla.gecko" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
