--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.mozilla.android.sync.crypto</groupId>
-      <artifactId>sync-crypto</artifactId>
-      <version>1.3-libs</version>
+      <groupId>org.mozilla.android.sync</groupId>
+      <artifactId>android-sync-crypto</artifactId>
+      <version>1.4-libs</version>
     </dependency>
     <!--  To match Android. *sigh* -->
     <!--
