--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.mozilla.gecko.sync.test"
+    sharedUserId="notSharedUserId"
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="10" />
+    <uses-permission android:name="org.mozilla.gecko.permissions.BROWSER_PROVIDER"/>
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="org.mozilla.gecko" />
