Passwords repository and use of passwords content provider.

--- a/src/main/java/org/mozilla/gecko/sync/repositories/android/Authorities.java.in
+++ b/src/main/java/org/mozilla/gecko/sync/repositories/android/Authorities.java.in
@@ -2,6 +2,6 @@
 package org.mozilla.gecko.sync.repositories.android;
 
 public class Authorities {
-  public static final String BROWSER_AUTHORITY   = "@ANDROID_PACKAGE_NAME@.db.browser";
-  public static final String PASSWORDS_AUTHORITY = "@ANDROID_PACKAGE_NAME@.db.passwordsprovider";
+  public static final String BROWSER_AUTHORITY   = "@ANDROID_PACKAGE_NAME@.providers.browser";
+  public static final String PASSWORDS_AUTHORITY = "@ANDROID_PACKAGE_NAME@.providers.passwords";
 }
