--- a/sync_syncadapter.xml.template
+++ b/sync_syncadapter.xml.template
@@ -1,8 +1,8 @@
+#filter substitution
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="org.mozilla.gecko.db.browser"
+    android:contentAuthority="@ANDROID_PACKAGE_NAME@.db.browser"
     android:accountType="org.mozilla.gecko.sync.account"
     android:supportsUploading="true"
     android:userVisible="true"
 />
-
