Fixed SecurityException error on pair complete. SyncAdapter accountType paramter can have at max 4 '.'-separated parts.

--- a/sync_syncadapter.xml.template
+++ b/sync_syncadapter.xml.template
@@ -2,7 +2,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="@ANDROID_PACKAGE_NAME@.db.browser"
-    android:accountType="org.mozilla.gecko.sync.account"
+    android:accountType="org.mozilla.firefox.sync"
     android:supportsUploading="true"
     android:userVisible="true"
 />
