--- a/sync_strings.dtd.in
+++ b/sync_strings.dtd.in
@@ -2,6 +2,7 @@
      a better place to live. -->
 <!ENTITY syncBrand.fullName.label "Firefox Sync">
 <!ENTITY syncBrand.shortName.label "Sync">
+<!ENTITY fullBrandName.label "Firefox">
 
 <!-- Main titles. -->
 <!ENTITY sync.app.name.label '&syncBrand.fullName.label;'>
@@ -9,8 +10,8 @@
 <!ENTITY sync.title.pair.label 'Pair a Device'>
 
 <!-- J-PAKE Key Screen -->
-<!ENTITY sync.subtitle.connect.label 'From a &syncBrand.fullName.label;-connected computer, go to &syncBrand.shortName.label; options and select “Add a device”'>
-<!ENTITY sync.subtitle.pair.label 'From the device to be paired, go to &syncBrand.shortName.label; options and select “Pair a device”'>
+<!ENTITY sync.subtitle.connect.label 'To activate your new device, select “Set Up Sync” on the device.'>
+<!ENTITY sync.subtitle.pair.label 'To activate, select “Pair a device” on your other device.'>
 <!ENTITY sync.pin.default.label '...\n...\n...\n'>
 <!ENTITY sync.link.show.label '<a href="https://support.mozilla.com/en-US/kb/add-a-device-to-firefox-sync">Show me how</a>'>
 <!ENTITY sync.link.nodevice.label '<a href="#">I\&apos;m not near my computer…</a>'>
@@ -28,13 +29,13 @@
   
 <!-- Setup Fail -->
 <!ENTITY sync.title.fail.label 'Cannot Set Up &syncBrand.shortName.label;'>
-<!ENTITY sync.subtitle.fail.label '&syncBrand.fullName.label; could not connect to the server. Would you like to try again?'>
+<!ENTITY sync.subtitle.fail.label '&fullBrandName.label; could not connect to &syncBrand.shortName.label;'. Would you like to try again?'>
 <!ENTITY sync.button.tryagain.label 'Try again'>
 <!ENTITY sync.button.manual.label 'Manual Setup'>
   
 <!-- Setup Success -->
 <!ENTITY sync.title.success.label 'Setup Complete'>
-<!ENTITY sync.subtitle.success.label 'Your data is now being encrypted and synchronized in the background.'>
+<!ENTITY sync.subtitle.success.label 'Your data is now being downloaded in the background. You can go to Settings to manage your account.'>
 <!ENTITY sync.settings.label 'Settings'>
 <!ENTITY sync.subtitle.manage.label 'Your &syncBrand.fullName.label; account is already set up. Go to Settings to manage your account.'>
   
