--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -15,7 +15,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS"/>
     <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS"/>
-    <uses-permission android:name="org.mozilla.gecko.PASSWORDS"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORDS_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
 
     <application android:debuggable="true"
                  android:label="@string/sync_app_name">
