--- a/AndroidManifest.xml.in
+++ b/AndroidManifest.xml.in
@@ -1,3 +1,4 @@
+#filter substitution
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.mozilla.gecko.sync.test"
@@ -5,7 +6,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-sdk android:minSdkVersion="10" />
-    <uses-permission android:name="org.mozilla.gecko.permissions.BROWSER_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.PASSWORDS_PROVIDER"/>
+    <uses-permission android:name="@ANDROID_PACKAGE_NAME@.permissions.BROWSER_PROVIDER"/>
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="org.mozilla.gecko" />
