Adding pairWithPin feature, for connecting new devices to Sync account.

--- a/manifests/SyncAndroidManifest_activities.xml.in
+++ b/manifests/SyncAndroidManifest_activities.xml.in
@@ -16,10 +16,11 @@
             android:clearTaskOnLaunch="true"
             android:launchMode="singleTask"
             android:name="org.mozilla.gecko.sync.setup.activities.AccountActivity"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="stateVisible|adjustResize"/>
         <activity
             android:name="org.mozilla.gecko.sync.setup.activities.SetupFailureActivity" />
         <activity
-            android:name="org.mozilla.gecko.sync.setup.activities.SetupSuccessActivity" />
+            android:name="org.mozilla.gecko.sync.setup.activities.SetupSuccessActivity"
+            android:launchMode="singleTask" />
         <activity
             android:name="org.mozilla.gecko.sync.setup.activities.SetupWaitingActivity" />
