--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,14 @@
                 </formats>
               </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-checkstyle-plugin</artifactId>
+              <version>2.8</version>
+              <configuration>
+                <configLocation>${basedir}/checkstyle.xml</configLocation>
+              </configuration>
+            </plugin>
           </reportPlugins>
         </configuration>
       </plugin>
