--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,14 @@
                 <configLocation>${basedir}/checkstyle.xml</configLocation>
               </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-pmd-plugin</artifactId>
+              <version>2.6</version>
+              <configuration>
+                <targetJdk>1.6</targetJdk>
+              </configuration>
+            </plugin>
           </reportPlugins>
         </configuration>
       </plugin>
