--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <name>sync</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mozilla.externalPackages>ch.boye.*:org.json.*:org.mozilla.apache.*</mozilla.externalPackages>
   </properties>
   <dependencies>
     <dependency>
@@ -170,6 +171,9 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <version>2.8</version>
+              <configuration>
+                <excludePackageNames>${mozilla.externalPackages}</excludePackageNames>
+              </configuration>
             </plugin>
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
