--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,10 @@
               <version>2.8</version>
               <configuration>
                 <configLocation>${basedir}/checkstyle.xml</configLocation>
+                <excludeRoots>
+                  <excludeRoot>${basedir}/src/main/java/org/mozilla/apache</excludeRoot>
+                  <excludeRoot>${basedir}/external</excludeRoot>
+                </excludeRoots>
               </configuration>
             </plugin>
             <plugin>
