Add Dependencies report to Maven site

--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
               <version>2.4</version>
               <reports>
                 <report>index</report>
+                <report>dependencies</report>
               </reports>
             </plugin>
             <plugin>
