--- a/strings.xml.in
+++ b/strings.xml.in
@@ -3,11 +3,12 @@
   <string name="sync_title_pair">&sync.title.pair.label;</string>
 
   <!-- J-PAKE PIN Screen -->
+  <string name="sync_subtitle_header">&sync.subtitle.header.label;</string>
   <string name="sync_subtitle_connect">&sync.subtitle.connect.label;</string>
   <string name="sync_subtitle_pair">&sync.subtitle.pair.label;</string>
   <string name="sync_pin_default">&sync.pin.default.label;</string>
   <string name="sync_link_show">&sync.link.show.label;</string>
-  <string name="sync_link_nodevice">&sync.link.nodevice.label;</string>
+  <string name="sync_link_advancedsetup">&sync.link.advancedsetup.label;</string>
 
   <!-- J-PAKE Waiting Screen -->
   
