Only feed org.mozilla.gecko through Checkstyle

--- a/pom.xml
+++ b/pom.xml
@@ -222,10 +222,7 @@
               <version>2.8</version>
               <configuration>
                 <configLocation>${basedir}/checkstyle.xml</configLocation>
-                <excludeRoots>
-                  <excludeRoot>${basedir}/src/main/java/org/mozilla/apache</excludeRoot>
-                  <excludeRoot>${basedir}/external</excludeRoot>
-                </excludeRoots>
+                <includes>**/org/mozilla/gecko/**</includes>
               </configuration>
             </plugin>
             <plugin>
