--- a/sync_strings.dtd.in
+++ b/sync_strings.dtd.in
@@ -15,6 +15,7 @@
 <!ENTITY sync.subtitle.connectlocation.label 'Select “&sync.title.pair.label;” in the &syncBrand.shortName.label; section of your desktop Firefox options.'>
 <!ENTITY sync.subtitle.pair.label 'To activate, select “Pair a device” on your other device.'>
 <!ENTITY sync.pin.default.label '...\n...\n...\n'>
+<!ENTITY sync.pin.oneline.label '...'>
 <!ENTITY sync.link.show.label 'Show me how.'>
 <!ENTITY sync.link.advancedsetup.label 'Advanced setup...'>
 <!ENTITY sync.link.nodevice.label 'I don\&apos;t have the device with me…'>
