--- a/android-sync-app/pom.xml
+++ b/android-sync-app/pom.xml
@@ -1,10 +1,10 @@
 <project
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.mozilla.gecko</groupId>
-    <artifactId>android-sync-parent</artifactId>
+    <artifactId>android-sync</artifactId>
     <version>1</version>
   </parent>
 
@@ -12,7 +12,7 @@
   <artifactId>android-sync-app</artifactId>
   <version>1</version>
   <packaging>apk</packaging>
-  <name>sync</name>
+  <name>Android Sync - App</name>
   <properties>
     <project.basedir>../</project.basedir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
