--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mozilla.gecko</groupId>
-  <artifactId>android-sync-parent</artifactId>
+  <artifactId>android-sync</artifactId>
   <version>1</version>
   <packaging>pom</packaging>
-  <name>android-sync-parent</name>
+  <name>Android Sync</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,6 +29,7 @@
         <groupId>com.google.android</groupId>
         <artifactId>android-test</artifactId>
         <version>2.3.3</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
